# actix_web_docker

./: Cargo.toml  Dockerfile  README.md  justfile
src/: main.rs
