[package]
name = "actix_web_docker"
version = "0.1.0"
authors = ["nnao45 <n4sekai5y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2"
actix-web = "1.0.0-rc"

futures = "0.1.25"
env_logger = "0.5"
bytes = "0.4"